@@ -28,6 +28,8 @@ Features
 Bugfixes
 --------
 
+* Prevent crashes due to Windows-specific code in ``auto`` running on
+  all platforms (Issue #2940)
 * Don’t run hyphenate on ``<pre>`` blocks (Issue #2939)
 * Make errors in reST display in logs again
 * Unquote paths given to ``link://`` magic URLs (Issue #2934)
